Avancées sur le cours Flask

--- a/Chapitre 5 - Flask, un framework d'application web.ipynb
+++ b/Chapitre 5 - Flask, un framework d'application web.ipynb
@@ -125,7 +125,9 @@
    "source": [
     "---\n",
     "\n",
-    "## Flask\n",
+    "# Flask\n",
+    "\n",
+    "## Introduction\n",
     "\n",
     "Flask est un framework pour le développement d'application web en Python. Son concurrent principal, Django, est un peu plus utilisé mais pose le problème de sa taille. Flask est parfait pour de petits projets ou des projets simples en général.\n",
     "\n",
@@ -242,7 +244,7 @@
     "\n",
     "### Définir des routes à paramètres\n",
     "\n",
-    "Bien sûr, écrire une route par numéro (on parle de 167.717 entrées là tout de même) parait à la fois gargantuesque et idiot. Il est donc possible de définir une route qui fonctionnerait correctement avec cet identifiant :\n"
+    "Bien sûr, écrire une route par numéro (on parle de 167.717 entrées là tout de même) parait à la fois gargantuesque et idiot. Il est donc possible de définir une route qui fonctionnerait correctement avec cet identifiant ( `python cours-flask/exemple2/app.py` ) :\n"
    ]
   },
   {
@@ -251,10 +253,162 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@app.route(\"/places/<place_id:int>\")\n",
+    "@app.route(\"/places/<place_id>\")\n",
+    "def chemin_place(place_id):\n",
+    "    return \"On est sur \" + place_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il est tout autant possible de *conditionner* le type de place_id (il serait intelligent par exemple de limiter place_id aux nombres.) D'après la [documentation](http://flask.pocoo.org/docs/0.12/quickstart/#variable-rules), il est possible de configurer les types suivants :\n",
+    "\n",
+    "| Type | Exemple | Description |\n",
+    "| ---- | ------- | ----------- |\n",
+    "| **string**  | foo | (Défaut) Accepte n'importe quelle chaîne |\n",
+    "| int     | 5 | Accepte les entiers |\n",
+    "| float   | 5.1 | Accepte un décimal anglais (avec un . et non une virgule) |\n",
+    "| path    | /foo/bar/fichier.txt | Accepte un chemin (attention aux conflits !) |\n",
+    "| any     | njfsd88sd0-f9 | Accepte n'importe quelle valeur |\n",
+    "| uuid    | 110e8400-e29b-11d4-a716-446655440000 | Acepte une chaîne [UUID](https://fr.wikipedia.org/wiki/Universal_Unique_Identifier) |\n",
+    "\n",
+    "Ces types de paramètres de route s'utilisent dans la définition de route comme suit (`python cours-flask/exemple3/app.py`):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.route(\"/places/<int:place_id>\")\n",
     "def chemin_place(place_id):\n",
     "    return \"On est sur \" + str(place_id)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Désormais, `place_id` ne répond qu'aux entiers et est automatiquement converti en entier (ce qui nous oblige à la transformer en chaîne pour la concaténer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Les *templates*\n",
+    "\n",
+    "### Introduction\n",
+    "\n",
+    "Jusque là, c'est très bien, mais afficher juste une chaîne de caractère ne fait pas de grands sites. Il va nous falloir envoyer du html. Bien sûr, on pourrait écrire cela (`python cours-flask/exemple4/app.py`):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.route(\"/\")\n",
+    "def accueil():\n",
+    "    nom_du_site = \"Gazetteer\"\n",
+    "    return '''\n",
+    "<html>\n",
+    "    <head>\n",
+    "        <title>{nom}</title>\n",
+    "    </head>\n",
+    "    <body>Bienvenue !</body>\n",
+    "</html>'''.format(nom=nom_du_site)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mais si cela marche bien pour ce petit exemple, cela deviendra vite compliqué et illisible quand vous aurez de (très) nombreuses pages avec un HTML plus complexe qu'un `title` et un `body`. C'est pour cela que de très nombreux frameworks offrent un système de *template*. Un template est un fichier HTML, XML ou équivalent qui sera lu par votre framework et complété le cas échéant par des informations que vous fournirez.\n",
+    "\n",
+    "Dans Flask, les templates sont généralement mis dans un sous-dossier `templates` du dossier principal de l'application (ici : `cours-flask/exemple4/templates/accueil.html`). Les variables sont alors incluses via des doubles accolades :\n",
+    "\n",
+    "```html\n",
+    "<html>\n",
+    "    <head>\n",
+    "        <title>{{nom}}</title>\n",
+    "    </head>\n",
+    "    <body>Bienvenue !</body>\n",
+    "</html>\n",
+    "```\n",
+    "\n",
+    "Ce fichier templates est ensuite déclaré et rendu par votre application Flask :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flask import Flask, render_template\n",
+    "\n",
+    "app = Flask(\"Application\")\n",
+    "\n",
+    "\n",
+    "@app.route(\"/\")\n",
+    "def accueil():\n",
+    "    return render_template(\"accueil.html\", nom=\"Gazetteer\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Commentaire de code \n",
+    "\n",
+    "Par rapport à l'utilisation précédente, nous avons :\n",
+    "- importé la fonction `render_template` depuis le module `flask`\n",
+    "- utilisé la fonction `render_template` qui prend:\n",
+    "    - en premier argument le chemin du template (à partir du sous-dossier template)\n",
+    "    - des arguments nommés pour le reste. Ces arguments nommés sont ensuite utilisés comme des variables dans le template\n",
+    "\n",
+    "**Important:** Pour lancer les applications désormais, vous devrez vous déplacer dans le bon dossier. Pour lancer cet exemple, vous devez avoir votre environnement virtuel sourcé puis taper les commandes suivantes depuis la racine de votre dossier cours :\n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple4\n",
+    "python app.py\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercice\n",
+    "\n",
+    "Ajouter à l'exemple précédent une variable comportant votre nom de telle manière que, suivant la valeur de variable, le template affiche `Bienvenue VotreNom`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conditions dans les templates\n",
+    "\n",
+    "## Boucles dans les templates\n",
+    "\n",
+    "## Héritage dans les templates\n",
+    "\n",
+    "## Pour aller plus loin\n",
+    "\n",
+    "Les systèmes de template étant utilisés par de nomb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
