--- a/Chapitre 5 - Flask, un framework d'application web.ipynb
+++ b/Chapitre 5 - Flask, un framework d'application web.ipynb
@@ -127,6 +127,8 @@
     "\n",
     "# Flask\n",
     "\n",
+    "Dans le cadre du cours sur Flask, nous construirons un petit [Gazetteer](https://en.wikipedia.org/wiki/Gazetteer). Un Gazetteer est un index de lieux avec des descriptions quand disponibles de ceux-ci\n",
+    "\n",
     "## Introduction\n",
     "\n",
     "Flask est un framework pour le développement d'application web en Python. Son concurrent principal, Django, est un peu plus utilisé mais pose le problème de sa taille. Flask est parfait pour de petits projets ou des projets simples en général.\n",
@@ -240,7 +242,7 @@
     "\n",
     "Mais il est bien sûr possible de faire plus ! Par exemple, que pouvez-vous me dire de ces deux adresses : http://www.enc-sorbonne.fr/fr/cours/initiation-xml et http://www.enc-sorbonne.fr/fr/cours/panorama-ressources-electroniques-existantes ?\n",
     "\n",
-    "Le chemin est similaire jusqu'à sa dernière partie ! On trouve souvent ce genre d'adresse par exemple avec des nombres (ce qui rend la chose encore plus claire !) : https://pleiades.stoa.org/places/108776 et https://pleiades.stoa.org/places/167717 où le chemin se découpe en `/places/[nombre]`. \n",
+    "Le chemin est similaire jusqu'à sa dernière partie ! On trouve souvent ce genre d'adresse par exemple avec des nombres (ce qui rend la chose encore plus claire !) : https://pleiades.stoa.org/places/109321 et https://pleiades.stoa.org/places/167717 où le chemin se découpe en `/places/[nombre]`. \n",
     "\n",
     "### Définir des routes à paramètres\n",
     "\n",
@@ -394,13 +396,226 @@
    "source": [
     "## Conditions dans les templates\n",
     "\n",
+    "Les templates vont plus loin que le simple affichage de variable, ils permettent aussi de réaliser des conditions pour vérifier qu'une chose ou une autre existe ou bien qu'une valeur particulière est affichée. Par exemple, si l'on avait potentiellement une variable `lieux` qui contiendrait le nombre de lieux enregistrés dans notre index topographique.\n",
+    "\n",
+    "Nous écririons donc \n",
+    "\n",
+    "```html\n",
+    "...\n",
+    "\n",
+    "    <body>\n",
+    "        <h1>Bienvenue !</h1>\n",
+    "        <p>Il y a {{len(lieux}} enregistrés, voici le premier : {{lieux[0]}}</p>\n",
+    "    </body>\n",
+    "</html>\n",
+    "```\n",
+    "\n",
+    "Mais le résultat ne serait pas très convivial. Afficher potentiellement `Voici le premier : ` et du vide donnera l'impression que le site ne marche pas. Et pour cause. Nous utiliserons donc un `if` :\n",
+    "\n",
+    "```html\n",
+    "...\n",
+    "\n",
+    "    <body>\n",
+    "        <h1>Bienvenue !</h1>\n",
+    "        <p>\n",
+    "            Il y a {{len(lieux}} enregistrés\n",
+    "            {% if lieux %}\n",
+    "            , voici le premier : {{lieux[0]}}\n",
+    "            {% endif %}\n",
+    "    </p>\n",
+    "    </body>\n",
+    "</html>\n",
+    "```\n",
+    "\n",
+    "Un bloc `if` est alors commencé par un `{% if condition %}` ou *conditions* est une condition python classique (on se souvient qu'une liste vide est égal à False et que donc par opposition, `lieux` sera positif si il y a un seul élément dans la liste). Le bloc `{% if condition %}` se termine nécessairement par un nouveau bloc `{% endif %}`.\n",
+    "\n",
+    "Il est bien sûr possible d'aller plus loin qu'un `if` : on peut compléter ce bloc par un `{% elif %}` et/ou un `{% else %}` \n",
+    "\n",
+    "```html\n",
+    "...\n",
+    "\n",
+    "    <body>\n",
+    "        <h1>Bienvenue !</h1>\n",
+    "        <p>\n",
+    "            {% if lieux %}\n",
+    "                Il y a {{len(lieux}} enregistrés , voici le premier : {{lieux[0]}}\n",
+    "            {% else %}\n",
+    "                La base de données est en cours de constitution\n",
+    "            {% endif %}\n",
+    "    </p>\n",
+    "    </body>\n",
+    "</html>\n",
+    "```\n",
+    "\n",
+    "**Important** : Il n'est pas possible de faire `len(lieux)` dans un template de Flask. Nous sommes obligés de passer par l'équivalent `{{lieux|length}}`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flask import Flask, render_template\n",
+    "\n",
+    "app = Flask(\"Application\")\n",
+    "\n",
+    "\n",
+    "@app.route(\"/\")\n",
+    "# Il est possible d'enregistrer plusieurs routes pour la même fonction. \n",
+    "# Cependant, si des paramètres de route ne sont pas dans toutes, pensez à mettre une valeur défaut !\n",
+    "@app.route(\"/exemple/<exemple>\")\n",
+    "def accueil(exemple=None):\n",
+    "    lieux = []\n",
+    "    if exemple:\n",
+    "        lieux = [\"Col. Lugdunum\", \"Augustomagus\"]\n",
+    "    return render_template(\"accueil.html\", nom=\"Gazetteer\", lieux=lieux)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lancez l'exemple 5 pour pouvoir voir le résultat \n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple5\n",
+    "python app.py\n",
+    "```\n",
+    "\n",
+    "puis allez sur http://127.0.0.1:5000/ et sur http://127.0.0.1:5000/exemple/exemple1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Les dictionnaires dans les templates\n",
+    "\n",
+    "Les dictionnaires dans les templates peuvent être appelés différemment : on peut utiliser le `.` en place des crochets habituels. Ainsi pour la liste de dictionnaires qui suit\n",
+    "\n",
+    "```python\n",
+    "lieux = [\n",
+    "    {\n",
+    "        \"nom\": \"Col. Lugdunum\",\n",
+    "        \"moderne\": \"Lyon\",\n",
+    "        \"latlong\": [45.762095775, 4.822438025],\n",
+    "        \"type\": \"ville\",\n",
+    "        \"description\": \"Col. Lugdunum was a Roman military colony from 43 BC and a major center in Gaul. Marcus Agrippa was involved in its expansion and two Roman emperors, Claudius and Caracalla, were born there.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"nom\": \"Samarobriva Ambianorum\",\n",
+    "        \"moderne\": \"Amiens\",\n",
+    "        \"type\": \"ville\",\n",
+    "        \"description\": \"An ancient place, cited: BAtlas 11 C3 Samarobriva Ambianorum \",\n",
+    "        \"latlong\": [49.8936075, 2.297948]\n",
+    "    }\n",
+    "]\n",
+    "```\n",
+    "\n",
+    "on pourra appelé au choix `{{lieux[0][\"nom\"]}}` ou `{{lieux[0].nom}}` \n",
+    "\n",
+    "#### *templates/accueil.html*\n",
+    "\n",
+    "```html\n",
+    "\n",
+    "        <p>\n",
+    "            {% if lieux %}\n",
+    "                Il y a {{ lieux|length }} enregistrés , voici le premier : {{lieux[0].nom}}\n",
+    "            {% else %}\n",
+    "                La base de données est en cours de constitution\n",
+    "            {% endif %}\n",
+    "    </p>\n",
+    "```\n",
+    "\n",
+    "#### *templates/place.html*\n",
+    "\n",
+    "```html\n",
+    "{% if lieu %}\n",
+    "<h1>{{lieu.nom}}</h1>\n",
+    "<h2>{{lieu.moderne}}</h2>\n",
+    "<dl>\n",
+    "    <dt>Longitude</dt><dd>{{lieu.latlong[1]}}</dd>\n",
+    "    <dt>Latitude</dt><dd>{{lieu.latlong[0]}}</dd>\n",
+    "    <dt>Description</dt><dd>{{lieu.description}}</dd>\n",
+    "    <dt>Type</dt><dd>{{lieu.type}}</dd>\n",
+    "</dl>\n",
+    "    \n",
+    "{% else %}\n",
+    "    <p>La base de données est en cours de constitution</p>\n",
+    "{% endif %}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Contenu d'app.py\n",
+    "\n",
+    "```python\n",
+    "from flask import Flask, render_template\n",
+    "\n",
+    "app = Flask(\"Application\")\n",
+    "\n",
+    "lieux = [\n",
+    "    {\n",
+    "        \"nom\": \"Col. Lugdunum\",\n",
+    "        \"moderne\": \"Lyon\",\n",
+    "        \"latlong\": [45.762095775, 4.822438025],\n",
+    "        \"type\": \"ville\",\n",
+    "        \"description\": \"Col. Lugdunum was a Roman military colony from 43 BC and a major center in Gaul. Marcus \"\n",
+    "                       \"Agrippa was involved in its expansion and two Roman emperors, Claudius and Caracalla, \"\n",
+    "                       \"were born there.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"nom\": \"Samarobriva Ambianorum\",\n",
+    "        \"moderne\": \"Amiens\",\n",
+    "        \"type\": \"ville\",\n",
+    "        \"description\": \"An ancient place, cited: BAtlas 11 C3 Samarobriva Ambianorum \",\n",
+    "        \"latlong\": [49.8936075, 2.297948]\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "\n",
+    "@app.route(\"/\")\n",
+    "def accueil():\n",
+    "    return render_template(\"accueil.html\", nom=\"Gazetteer\", lieux=lieux)\n",
+    "\n",
+    "\n",
+    "@app.route(\"/place/<int:place_id>\")\n",
+    "def lieu(place_id):\n",
+    "    return render_template(\"place.html\", nom=\"Gazetteer\", lieu=lieux[place_id])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lancez l'exemple 6 pour pouvoir voir le résultat \n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple6\n",
+    "python app.py\n",
+    "```\n",
+    "\n",
+    "puis allez sur http://127.0.0.1:5000/ puis sur http://127.0.0.1:5000/place/0 ou http://127.0.0.1:5000/place/1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Boucles dans les templates\n",
     "\n",
     "## Héritage dans les templates\n",
     "\n",
+    "## Les assets\n",
+    "\n",
     "## Pour aller plus loin\n",
     "\n",
-    "Les systèmes de template étant utilisés par de nomb"
+    "Les systèmes de template étant utilisés par de nombreux systèmes, regardez les fichiers `supports/chapitre-5/template.omeka.php` et `supports/chapitre-5/template.wordpress.php` qui sont tous deux des fichiers templates pour Omeka et WordPress. Notez que PHP, contrairement à python, peut s'écrire directement dans un fichier html et qu'`echo` est à peu près l'équivalent de `print` en python"
    ]
   },
   {
