Correcting a little something

--- a/Chapitre 5 - Flask, un framework d'application web.ipynb
+++ b/Chapitre 5 - Flask, un framework d'application web.ipynb
@@ -531,19 +531,25 @@
     "#### *templates/place.html*\n",
     "\n",
     "```html\n",
-    "{% if lieu %}\n",
-    "<h1>{{lieu.nom}}</h1>\n",
-    "<h2>{{lieu.moderne}}</h2>\n",
-    "<dl>\n",
-    "    <dt>Longitude</dt><dd>{{lieu.latlong[1]}}</dd>\n",
-    "    <dt>Latitude</dt><dd>{{lieu.latlong[0]}}</dd>\n",
-    "    <dt>Description</dt><dd>{{lieu.description}}</dd>\n",
-    "    <dt>Type</dt><dd>{{lieu.type}}</dd>\n",
-    "</dl>\n",
-    "    \n",
-    "{% else %}\n",
-    "    <p>La base de données est en cours de constitution</p>\n",
-    "{% endif %}\n",
+    "<html>\n",
+    "    <head>\n",
+    "        <title>Gazetteer {%if lieu %}| Lieu : {{lieu.nom}} {% endif %}</title>\n",
+    "    </head>\n",
+    "    <body>\n",
+    "        {% if lieu %}\n",
+    "            <h1>{{lieu.nom}}</h1>\n",
+    "            <h2>{{lieu.moderne}}</h2>\n",
+    "            <dl>\n",
+    "                <dt>Longitude</dt><dd>{{lieu.latlong[1]}}</dd>\n",
+    "                <dt>Latitude</dt><dd>{{lieu.latlong[0]}}</dd>\n",
+    "                <dt>Description</dt><dd>{{lieu.description}}</dd>\n",
+    "                <dt>Type</dt><dd>{{lieu.type}}</dd>\n",
+    "            </dl>\n",
+    "        {% else %}\n",
+    "            <p>La base de données est en cours de constitution</p>\n",
+    "        {% endif %}\n",
+    "    </body>\n",
+    "</html>\n",
     "```"
    ]
   },
@@ -607,7 +613,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Boucles dans les templates\n",
+    "## Boucles dans les templates et liens\n",
+    "\n",
+    "\n",
     "\n",
     "## Héritage dans les templates\n",
     "\n",
