Les boucles dans Flask

--- a/Chapitre 5 - Flask, un framework d'application web.ipynb
+++ b/Chapitre 5 - Flask, un framework d'application web.ipynb
@@ -385,6 +385,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Information supplémentaire\n",
+    "\n",
+    "Le système de template de Flask s'appelle [Jinja](http://jinja.pocoo.org/) et il a une vie en dehors de Flask (vous pouvez l'utiliser sans utiliser Flask.)\n",
+    "\n",
     "#### Exercice\n",
     "\n",
     "Ajouter à l'exemple précédent une variable comportant votre nom de telle manière que, suivant la valeur de variable, le template affiche `Bienvenue VotreNom`."
@@ -405,10 +409,12 @@
     "\n",
     "    <body>\n",
     "        <h1>Bienvenue !</h1>\n",
-    "        <p>Il y a {{len(lieux}} enregistrés, voici le premier : {{lieux[0]}}</p>\n",
+    "        <p>Il y a {{lieux|length} enregistrés, voici le premier : {{lieux[0]}}</p>\n",
     "    </body>\n",
     "</html>\n",
     "```\n",
+    "\n",
+    "**Note** : Il n'est pas possible de faire `len(lieux)` dans un template de Flask. Nous sommes obligés de passer par l'équivalent `{{lieux|length}}`\n",
     "\n",
     "Mais le résultat ne serait pas très convivial. Afficher potentiellement `Voici le premier : ` et du vide donnera l'impression que le site ne marche pas. Et pour cause. Nous utiliserons donc un `if` :\n",
     "\n",
@@ -418,7 +424,7 @@
     "    <body>\n",
     "        <h1>Bienvenue !</h1>\n",
     "        <p>\n",
-    "            Il y a {{len(lieux}} enregistrés\n",
+    "            Il y a {{lieux|length}} enregistrés\n",
     "            {% if lieux %}\n",
     "            , voici le premier : {{lieux[0]}}\n",
     "            {% endif %}\n",
@@ -438,16 +444,14 @@
     "        <h1>Bienvenue !</h1>\n",
     "        <p>\n",
     "            {% if lieux %}\n",
-    "                Il y a {{len(lieux}} enregistrés , voici le premier : {{lieux[0]}}\n",
+    "                Il y a {{lieux|length}} enregistrés , voici le premier : {{lieux[0]}}\n",
     "            {% else %}\n",
     "                La base de données est en cours de constitution\n",
     "            {% endif %}\n",
     "    </p>\n",
     "    </body>\n",
     "</html>\n",
-    "```\n",
-    "\n",
-    "**Important** : Il n'est pas possible de faire `len(lieux)` dans un template de Flask. Nous sommes obligés de passer par l'équivalent `{{lieux|length}}`"
+    "```"
    ]
   },
   {
@@ -615,8 +619,67 @@
    "source": [
     "## Boucles dans les templates et liens\n",
     "\n",
+    "Il ne manquait donc plus qu'une chose du python traditionnel: les boucles. Une fois ce type d'expression apprise, vous auraient l'ensemble des expressions importantes dans le système de template de Flask. Tout comme les `if`, les expressions de boucles se font entre des `{% %}` : `{% for valeur in conteneur %}` et `{%endfor%}`.\n",
     "\n",
+    "```html\n",
+    "Il y a {{lieux|length}} enregistrés :\n",
+    "<ul>\n",
+    "    {% for lieu in lieux %}\n",
+    "        <li>{{lieu.nom}}</li>\n",
+    "    {% endfor %}\n",
+    "</ul>\n",
+    "```\n",
     "\n",
+    "Le système fonctionne comme les boucles `for` en python : `{% for _ in _ %}` est donc aussi valable pour `dict.items()`, `dict.values()`, `dict.keys()`, *etc.*\n",
+    "\n",
+    "À partir de cette boucle, il serait intéressant de se servir de cette page d'accueil pour faire un index. Et pour faire un index, il faut des liens. Et pour faire des liens... il faut `url_for()` dans Flask ! La fonction `url_for()` est appelée du côté du template et doit prendre comme premier argument le nom de la fonction qui vous intéresse (par exemple `lieu` est le nom de notre fonction pour la route `@app.route(\"/place/<int:place_id>\")`. Les arguments suivants correspondent aux arguments nécessaire à la construction de l'url (ici `place_id`) : `url_for(\"lieu\", place_id=0)` retournera la valeur `/place/0`. Dans le HTML, cela donnera : \n",
+    "\n",
+    "```html\n",
+    "Il y a {{lieux|length}} enregistrés :\n",
+    "<ul>\n",
+    "    {% for lieu_id, lieu in lieux.items() %}\n",
+    "        <li><a href=\"{{url_for('lieu', place_id=lieu_id)}}\">{{lieu.nom}}</a></li>\n",
+    "    {% endfor %}\n",
+    "</ul>\n",
+    "```\n",
+    "\n",
+    "ou bien pour retourner à l'accueil : \n",
+    "\n",
+    "```html\n",
+    "<p><a href=\"{{url_for('accueil')}}\">Retour à l'accueil</a></p>\n",
+    "```\n",
+    "\n",
+    "**Note:** Nous avons changé la liste en un dictionnaire de dictionnaire dans le fichier app.py : \n",
+    "\n",
+    "```python\n",
+    "lieux = {\n",
+    "    0: {\n",
+    "        \"nom\": \"Col. Lugdunum\",\n",
+    "        \"moderne\": \"Lyon\",\n",
+    "        \"latlong\": [45.762095775, 4.822438025],\n",
+    "        \"type\": \"ville\",\n",
+    "        \"description\": \"Col. Lugdunum was a Roman military colony from 43 BC and a major center in Gaul. Marcus \"\n",
+    "                       \"Agrippa was involved in its expansion and two Roman emperors, Claudius and Caracalla, \"\n",
+    "                       \"were born there.\"\n",
+    "    },\n",
+    "    #...\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Lancez l'exemple 7 pour pouvoir voir le résultat\n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple7\n",
+    "python app.py\n",
+    "```\n",
+    "\n",
+    "puis allez sur http://127.0.0.1:5000/ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Héritage dans les templates\n",
     "\n",
     "## Les assets\n",
