Include and extends

--- a/Chapitre 5 - Flask, un framework d'application web.ipynb
+++ b/Chapitre 5 - Flask, un framework d'application web.ipynb
@@ -682,7 +682,187 @@
    "source": [
     "## Héritage dans les templates\n",
     "\n",
+    "La composition d'un site web est souvent répétitive : on retrouve ainsi très souvent le même en-tête, le même menu, le même pied-de-page et c'est le centre du contenu qui change.\n",
+    "\n",
+    "![Composition classique d'une page web en vertical](images/decoupage.site.png)\n",
+    "\n",
+    "Mais nous avons déjà deux pages. Comme d'habitude, les programmeur-se-s ont cherché à éviter la répétition de tous les éléments. Pour deux raisons :\n",
+    "\n",
+    "- c'est une perte de temps de répéter les éléments, même en copiant-collant\n",
+    "- c'est un véritable enfer de maintenance : il faut vérifier à chaque changement que l'ensemble des pages ont été modifiées.\n",
+    "\n",
+    "On va donc chercher à créer un ensemble de sous-pages qui ne contiennent que l'élément *main* tandis que l'entourage de la page sera importée depuis notre dite page. Ainsi nos pages seront constituées :\n",
+    "- d'un bloc principal contenant les éléments voués à se répéter\n",
+    "- d'un bloc secondaire contenant les informations spécifiques à une page \n",
+    "\n",
+    "![Découpage des éléments et responsabilités des blocs](images/incrustation.site.png)\n",
+    "\n",
+    "Pour faire cela sous Jinja, il existe un moyen simple : la définition de block via `{% block nom_de_bloc %}` et `{% endblock %}`. On définit un block dans le fichier conteneur.html que l'on étend dans les pages via `{% extends \"conteneur.html\" %}` (Attention, pas de `{%endextends%}` ici !\n",
+    "\n",
+    "### Avec un seul bloc d'import\n",
+    "\n",
+    "#### templates/conteneur.html\n",
+    "\n",
+    "```html\n",
+    "<html>\n",
+    "    <head>\n",
+    "        <title>Gazetteer</title>\n",
+    "    </head>\n",
+    "    <body>\n",
+    "        <div><h1>Bienvenue sur le Gazetteer</h1></div>\n",
+    "        <div>{% block corps%}{%endblock%}</div>\n",
+    "    </body>\n",
+    "</html>\n",
+    "```\n",
+    "\n",
+    "#### templates/accueil.html\n",
+    "\n",
+    "```html\n",
+    "{% extends \"conteneur.html\" %}\n",
+    "{% block corps %}\n",
+    "Il y a {{lieux|length}} enregistrés :\n",
+    "<ul>\n",
+    "    {% for lieu_id, lieu in lieux.items() %}\n",
+    "        <li><a href=\"{{url_for('lieu', place_id=lieu_id)}}\">{{lieu.nom}}</a></li>\n",
+    "    {% endfor %}\n",
+    "</ul>\n",
+    "{% endblock %}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deux blocks\n",
+    "\n",
+    "Il est aussi possible d'étendre plusieurs blocs avec un seul conteneur : il suffit de déclarer l'ensemble des blocs et de les remplir le cas échéant : \n",
+    "\n",
+    "#### templates/conteneur.html\n",
+    "\n",
+    "```html\n",
+    "<html>\n",
+    "    <head>\n",
+    "        <title>Gazetteer {%block titre %}{%endblock%}</title>\n",
+    "    </head>\n",
+    "    <body>\n",
+    "        <div><h1>Bienvenue sur le Gazetteer</h1></div>\n",
+    "        <div>{% block corps%}{%endblock%}</div>\n",
+    "    </body>\n",
+    "</html>\n",
+    "```\n",
+    "\n",
+    "#### templates/pages/accueil.html\n",
+    "*Pour plus de lisibilité, il est commun de regrouper les éléments semblables dans des sous-dossiers de templates.*\n",
+    "\n",
+    "```html\n",
+    "{% extends \"conteneur.html\" %}\n",
+    "{% block corps %}\n",
+    "Il y a {{lieux|length}} enregistrés :\n",
+    "<ul>\n",
+    "    {% for lieu_id, lieu in lieux.items() %}\n",
+    "        <li><a href=\"{{url_for('lieu', place_id=lieu_id)}}\">{{lieu.nom}}</a></li>\n",
+    "    {% endfor %}\n",
+    "</ul>\n",
+    "{% endblock %}\n",
+    "```\n",
+    "\n",
+    "#### templates/pages/places.html\n",
+    "\n",
+    "```html\n",
+    "{% extends \"conteneur.html\" %}\n",
+    "{% block titre %}\n",
+    "    {%if lieu %}| Lieu : {{lieu.nom}} {% endif %}\n",
+    "{% endblock %}\n",
+    "\n",
+    "{% block corps %}\n",
+    "    {% if lieu %}\n",
+    "        <h1>{{lieu.nom}}</h1>\n",
+    "        <h2>{{lieu.moderne}}</h2>\n",
+    "        <dl>\n",
+    "            <dt>Longitude</dt><dd>{{lieu.latlong[1]}}</dd>\n",
+    "            <dt>Latitude</dt><dd>{{lieu.latlong[0]}}</dd>\n",
+    "            <dt>Description</dt><dd>{{lieu.description}}</dd>\n",
+    "            <dt>Type</dt><dd>{{lieu.type}}</dd>\n",
+    "        </dl>\n",
+    "    {% else %}\n",
+    "        <p>La base de données est en cours de constitution</p>\n",
+    "    {% endif %}\n",
+    "    <p><a href=\"{{url_for('accueil')}}\">Retour à l'accueil</a></p>\n",
+    "{% endblock %}\n",
+    "```\n",
+    "\n",
+    "#### Lancons !\n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple8\n",
+    "python app.py\n",
+    "```\n",
+    "\n",
+    "puis allez sur http://127.0.0.1:5000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Les includes\n",
+    "\n",
+    "En plus de bloc, il existe la possibilité non pas d'étendre mais d'inclure un ensemble d'éléments. Cela devient très pratique quand on veut multiplier les squelettes principaux ou qu'un ensemble de sous-éléments se répètent (par exemple, plusieurs pages ont une visionneuse d'image). Le découpage logique se fait alors comme suit :\n",
+    "- un ensemble de pages\n",
+    "- des conteneurs qui seront étendus par ces pages\n",
+    "- des sous-éléments incrustable dans les conteneurs ou les pages \n",
+    "\n",
+    "![Incrustation avancée avec des sous-éléments](images/incrustation.avancee.png)\n",
+    "\n",
+    "Cette inclusion se fait via `{% include \"chemin/vers/inclusion/html\" %}` et ne possède pas de fin `{% endincludes %}`.\n",
+    "\n",
+    "Nous pouvons donc changer `conteneur.html` et créer une page `partials/metadata.html`. Notez que si vous avez des `blocks` dans un include, le block ne sera pas complété par la page.\n",
+    "\n",
+    "#### conteneur.html\n",
+    "\n",
+    "```html\n",
+    "<html>\n",
+    "    <head>\n",
+    "        <title>Gazetteer {%block titre %}{%endblock%}</title>\n",
+    "        {% include \"partials/metadata.html\" %}\n",
+    "    </head>\n",
+    "    <body>\n",
+    "        <div><h1>Bienvenue sur le Gazetteer</h1></div>\n",
+    "        <div>{% block corps%}{%endblock%}</div>\n",
+    "    </body>\n",
+    "</html>\n",
+    "\n",
+    "```\n",
+    "\n",
+    "\n",
+    "#### partials/metadata.html\n",
+    "\n",
+    "```html\n",
+    "<meta name=\"description\" content=\"Gazetteer formidable développé par l'Ecole Nationale des Chartes\">\n",
+    "<meta name=\"keywords\" content=\"Gazetteer,Chartes,Ecole,Topographie,Dictionnaire,Topologie\">\n",
+    "<meta name=\"author\" content=\"Thibault Clérice\">\n",
+    "<meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
+    "```\n",
+    "\n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple9\n",
+    "python app.py\n",
+    "```\n",
+    "\n",
+    "puis allez sur http://127.0.0.1:5000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Les assets\n",
+    "\n",
+    "Pour finir ce chapitre sur les bases de flask, je propose que l'on essaye de faire quelque chose d'un peu plus joli. Parce que pour l'instant... disons que le design est discutable.\n",
+    "\n",
+    "\n",
     "\n",
     "## Pour aller plus loin\n",
     "\n",
