Cours Flask intro fini

--- a/Chapitre 5 - Flask, un framework d'application web.ipynb
+++ b/Chapitre 5 - Flask, un framework d'application web.ipynb
@@ -194,7 +194,14 @@
     "\n",
     "### Une application simple\n",
     "\n",
-    "Voyons comment faire un site simple. Le code qui suit a été copié dans un fichier python au chemin `cours-flask/exemple1/app.py`. **Important**: Vous devez avoir votre environnement virtual *sourcé* et tapez `python cours-flask/exemple1/app.py` depuis le dossier racine de ce cours. Une fois le code lancé, allez sur [http://127.0.0.1:5000/](http://127.0.0.1:5000/)"
+    "Voyons comment faire un site simple. Le code qui suit a été copié dans un fichier python au chemin `cours-flask/exemple1/app.py`. **Important**: Vous devez avoir votre environnement virtual *sourcé* et tapez `python cours-flask/exemple1/app.py` depuis le dossier racine de ce cours. Une fois le code lancé, allez sur [http://127.0.0.1:5000/](http://127.0.0.1:5000/)\n",
+    "\n",
+    "#### Exemple 1\n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple1\n",
+    "python app.py\n",
+    "```"
    ]
   },
   {
@@ -264,6 +271,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
+    "#### Exemple 2\n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple2\n",
+    "python app.py\n",
+    "```\n",
+    "\n",
     "Il est tout autant possible de *conditionner* le type de place_id (il serait intelligent par exemple de limiter place_id aux nombres.) D'après la [documentation](http://flask.pocoo.org/docs/0.12/quickstart/#variable-rules), il est possible de configurer les types suivants :\n",
     "\n",
     "| Type | Exemple | Description |\n",
@@ -293,7 +309,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Désormais, `place_id` ne répond qu'aux entiers et est automatiquement converti en entier (ce qui nous oblige à la transformer en chaîne pour la concaténer."
+    "Désormais, `place_id` ne répond qu'aux entiers et est automatiquement converti en entier (ce qui nous oblige à la transformer en chaîne pour la concaténer.\n",
+    "\n",
+    "\n",
+    "#### Exemple 3\n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple3\n",
+    "python app.py\n",
+    "```"
    ]
   },
   {
@@ -374,6 +398,9 @@
     "    - des arguments nommés pour le reste. Ces arguments nommés sont ensuite utilisés comme des variables dans le template\n",
     "\n",
     "**Important:** Pour lancer les applications désormais, vous devrez vous déplacer dans le bon dossier. Pour lancer cet exemple, vous devez avoir votre environnement virtuel sourcé puis taper les commandes suivantes depuis la racine de votre dossier cours :\n",
+    "\n",
+    "\n",
+    "#### Exemple 4\n",
     "\n",
     "```sh\n",
     "cd cours-flask/exemple4\n",
@@ -456,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,6 +507,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "#### Exemple 5\n",
+    "\n",
     "Lancez l'exemple 5 pour pouvoir voir le résultat \n",
     "\n",
     "```sh\n",
@@ -603,6 +633,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "#### Exemple 6\n",
+    "\n",
     "Lancez l'exemple 6 pour pouvoir voir le résultat \n",
     "\n",
     "```sh\n",
@@ -665,6 +698,8 @@
     "    #...\n",
     "}\n",
     "```\n",
+    "\n",
+    "#### Exemple 7\n",
     "\n",
     "Lancez l'exemple 7 pour pouvoir voir le résultat\n",
     "\n",
@@ -792,7 +827,7 @@
     "{% endblock %}\n",
     "```\n",
     "\n",
-    "#### Lancons !\n",
+    "#### Exemple 8\n",
     "\n",
     "```sh\n",
     "cd cours-flask/exemple8\n",
@@ -845,6 +880,7 @@
     "<meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
     "```\n",
     "\n",
+    "#### Exemple 9\n",
     "\n",
     "```sh\n",
     "cd cours-flask/exemple9\n",
@@ -862,19 +898,28 @@
     "\n",
     "Pour finir ce chapitre sur les bases de flask, je propose que l'on essaye de faire quelque chose d'un peu plus joli. Parce que pour l'instant... disons que le design est discutable.\n",
     "\n",
+    "Les assets, contrairement aux templates, sont des fichiers statiques : ils ne nécessitent pas de calcul ou de remplacement. Alors pour les lier, il suffit de les placer dans un dossier `/static/` dans le dossier principal de l'application et d'y mettre le nécessaire (on a chargé pour l'exemple 10 les fichiers nécessaires à bootstrap)\n",
+    "\n",
+    "Pour réaliser le lien vers un fichiers statique, on utilise aussi la fonction `url_for()`. En premier paramètre, on utilise le nom `\"static\"` et le paramètre nommé `filename=\"chemin/vers/le/fichier/depuis/le/dossier/static.gif\"`. Exemple pour le fichier css de bootstrap :\n",
+    "\n",
+    "```html\n",
+    "<link rel=\"stylesheet\" href=\"{{ url_for('static', filename='css/bootstrap.css')}}\">\n",
+    "```\n",
+    "\n",
+    "#### Exemple 10\n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple10\n",
+    "python app.py\n",
+    "```\n",
+    "\n",
+    "puis allez sur http://127.0.0.1:5000\n",
     "\n",
     "\n",
     "## Pour aller plus loin\n",
     "\n",
     "Les systèmes de template étant utilisés par de nombreux systèmes, regardez les fichiers `supports/chapitre-5/template.omeka.php` et `supports/chapitre-5/template.wordpress.php` qui sont tous deux des fichiers templates pour Omeka et WordPress. Notez que PHP, contrairement à python, peut s'écrire directement dans un fichier html et qu'`echo` est à peu près l'équivalent de `print` en python"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
