--- a/Chapitre 6 - Flask et introduction au SQL en Python.ipynb
+++ b/Chapitre 6 - Flask et introduction au SQL en Python.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Chapitre 6 - Flask, introduction du SQL et des sessions utilisateurs\n",
+    "Chapitre 6 - Flask et introduction au SQL en Python\n",
     "==="
    ]
   },
@@ -12,10 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ce chapitre a pour but de vous faire découvrir le fonctionnement de Flask :\n",
-    "- dans le cadre d'une utilisation d'une base de données MySQL\n",
-    "- avec un système d'utilisateur-rice-s\n",
-    "- avec des formulaires\n",
+    "Ce chapitre a pour but de vous faire découvrir l'utilisation de MySQL en Python et avec Flask en particulier.\n",
     "\n",
     "Notre projet d'application Gazetteer se précise donc. Pour ne pas avoir à passer trop de temps sur d'autres tâches, voici un modèle de base de données pour le projet (très minimal) :\n",
     "\n",
@@ -234,7 +231,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlalchemy.engine.result.ResultProxy object at 0x7fbc7ce4b748>\n",
+      "<sqlalchemy.engine.result.ResultProxy object at 0x7f7bb8fd9588>\n",
       "Hippana\n",
       "<class 'sqlalchemy.engine.result.RowProxy'>\n",
       "Nicomedia\n",
@@ -328,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +336,208 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Des modèles aux requêtes"
+    "### Des modèles aux requêtes\n",
+    "\n",
+    "#### `Select * From Place`\n",
+    "Maintenant que notre modèle est mis en place, il est possible de faire des requêtes. Pour récupérer l'intégralité des lieux, nous devons faire `NomDeLaClasseDeDonnées.query.all()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Place 1>, <Place 2>, <Place 3>, <Place 4>, <Place 5>, <Place 6>, <Place 7>, <Place 8>, <Place 9>, <Place 10>, <Place 11>, <Place 12>, <Place 13>, <Place 14>, <Place 15>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lieux = Place.query.all()\n",
+    "print(lieux)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Afficher des informations sur un lieux\n",
+    "\n",
+    "Nous avons donc désormais une liste de lieux issus de la base de données. Peut-être pouvons nous afficher le nom de chacun d'entre eux. Pour cela, nous allons utiliser les nom de colonnes comme des attributs :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hippana settlement\n",
+      "Nicomedia settlement\n",
+      "Aornos settlement\n",
+      "The \"Hochtor Sanctuary\" sanctuary\n",
+      "Lipara (settlement) settlement\n",
+      "Arch of Constantine arch\n",
+      "Taberna Pomaria di Felix taberna-shop\n",
+      "S. Paulus church\n",
+      "Calleva settlement\n",
+      "Colophon/Colophon ad Mare/Notion settlement\n",
+      "Bousiris settlement\n",
+      "Corinthia region\n",
+      "Garumna (river) river\n",
+      "Caelius Mons hill\n",
+      "Prinias (Patela) settlement\n"
+     ]
+    }
+   ],
+   "source": [
+    "for lieu in lieux:\n",
+    "    print(lieu.place_nom, lieu.place_type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `Select * From Places where place_id = 1`\n",
+    "\n",
+    "Pour les clés primaires, Flask SqlAlchemy propose l'utilisation de `.query.get(cle)` pour récupérer l'information, en l'occurence, si l'on voulait retrouver le lieu 5 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lipara (settlement)\n"
+     ]
+    }
+   ],
+   "source": [
+    "cinq = Place.query.get(5)\n",
+    "print(cinq.place_nom)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `Select * From Places where place_type=\"settlement\"`\n",
+    "\n",
+    "Pour les requêtes plus complexes (avec un champ autre que le champ primaire), on utilise les conditions pythons `==` dans `.query.filter()`. On retrouve ensuite les résultats en utilisant\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Place 1>, <Place 2>, <Place 3>, <Place 5>, <Place 9>, <Place 10>, <Place 11>, <Place 15>]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "len() takes no keyword arguments",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-c7aaf1365905>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msettlements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPlace\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPlace\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplace_type\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"settlement\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msettlements\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msettlements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPlace\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPlace\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplace_type\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"settlement\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: len() takes no keyword arguments"
+     ]
+    }
+   ],
+   "source": [
+    "settlements = Place.query.filter(Place.place_type==\"settlement\").all()\n",
+    "print(settlements)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Compter le nombre de résultats\n",
+    "\n",
+    "Il y a des situations où l'on souhaite simplement compter les résultats pour afficher cette information. On remplacera alors simplement `.all()` par `.count()`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "settlements = Place.query.filter(Place.place_type==\"settlement\").count()\n",
+    "print(settlements)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Une expliquation : ce qui se passe derrière tout cela\n",
+    "\n",
+    "SQL Alchemy est ce que l'on appelle un ORM ([Object-Relational Mapping](https://fr.wikipedia.org/wiki/Mapping_objet-relationnel)). Les ORM ont généralement plusieurs avantage sur l'utilisation de requêtes directement écrites en SQL :\n",
+    "\n",
+    "- les résultats sont dans des formes faciles à exploiter : il ne s'agit pas de dictionnaire ou de liste mais d'objet\n",
+    "- les requêtes sont simples à écrire et faciles à comprendre sans avoir de grandes connaissances en SQL\n",
+    "- généralement, ils offrent une compatibilité avec de nombreux systèmes : SQLAlchemy peut se connecter SQLite, Postgresql, MySQL, Oracle, MS-SQL, Firebird, Sybase, etc. Cela signifie qu'il est possible de changer de système très facilement en changeant simplement la ligne de connexion.\n",
+    "\n",
+    "Quand on réalise une requête de type `Place.query.filter(Place.place_type==\"settlement\")`, Flask SQL Alchemy va commencer à construire la requête suivante : `SELECT * FROM Place WHERE place_type=\"settlement\"`. Puis, :\n",
+    "- en faisant `.all()` ensuite, il va récupérer l'ensemble des résultats tels quels\n",
+    "- en faisant `.count()`, il va modifier la requête en `SELECT COUNT(*) FROM Place where place_type=\"settlement\"` puis l'exécuter\n",
+    "\n",
+    "La requête est donc traduite et augmentée au fur et à mesure que nous enchaînons les méthodes.\n",
+    "\n",
+    "#### Exercice\n",
+    "Par exemple, on peut très bien ordonner les objets. Pouvez-vous traduire la ligne suivante en MySQL :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Place 15>, <Place 2>, <Place 5>, <Place 1>, <Place 10>, <Place 9>, <Place 11>, <Place 3>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "settlements = Place.query.filter(Place.place_type==\"settlement\").order_by(Place.place_nom.desc()).all()\n",
+    "print(settlements)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Des requêtes à leur utilisation dans une page web"
    ]
   }
  ],
